crates/weft-snapshots/tests/snapshots/solid-jsx/example-color-picker.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-color-picker as solid-jsx
---
function _text(v) {
  if (typeof v === "string") return v;
  if (typeof v === "number") return Number.isFinite(v) ? String(v) : "";
  if (typeof v === "boolean") return String(v);
  return "";
}

function _act(actions, event) {
  if (typeof actions !== "object" || actions === null || !Object.hasOwn(actions, event.action)) return;
  const fn = actions[event.action];
  if (typeof fn === "function") fn(event);
}

function _color(v) {
  return /^#[0-9a-fA-F]{6}$/.test(v) ? v.toLowerCase() : "#000000";
}

export default function WeftScreen(props) {
  return (
    <main data-weft-id="root" aria-label="Theme">
      <label>
        <span aria-hidden="true">Accent colour</span>
        <input data-weft-id="accent" type="color" aria-label="Accent colour" value={_color(_text(props.data?.accent))} onInput={(_e) => { const _v = _e.currentTarget.value; if (_v !== undefined) props.onChange?.("$.accent", _v); _act(props.actions, { id: "accent", action: "theme.update" }); }} />
      </label>
    </main>
  );
}
